// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<label
  className="root"
>
  <input
    name="__TEST__"
    onChange={[MockFunction]}
    type="checkbox"
    value="__VALUE__"
  />
  <Box
    alignItems="center"
  />
</label>
`;

exports[`Checkbox should render styled 1`] = `
<label
  className="root styled-TV8"
>
  <input
    name="__TEST__"
    onChange={[MockFunction]}
    type="checkbox"
    value="__TEST__"
  />
  <Box
    alignItems="center"
  >
    __LABEL__
  </Box>
</label>
`;

exports[`Checkbox should render with label 1`] = `
<label
  className="root"
>
  <input
    name="__TEST__"
    onChange={[MockFunction]}
    type="checkbox"
    value="__TEST__"
  />
  <Box
    alignItems="center"
  >
    __LABEL__
  </Box>
</label>
`;
